--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start" : "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "build" : "echo \"Error: no build specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
