--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -53,12 +53,15 @@ jobs:
       # Terraform Init
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
       # Terraform Plan
       - name: Terraform Plan
         run: terraform plan
+        working-directory: terraform
       # Terraform Apply
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: terraform
       - name: Update kubeconfig
         run: |
           aws eks --region us-west-2 update-kubeconfig --name takehome
