--- a/.github/workflows/destroyterraform.yml
+++ b/.github/workflows/destroyterraform.yml
@@ -16,10 +16,8 @@ jobs:
         terraform_version: 1.0.0
 
     - name: Terraform Init
-      run: terraform init \
-        -backend-config="bucket=takehome-backend" \
-        -backend-config="tfstate" \
-        -backend-config="region=us-west-2"
+      run: terraform init -backend-config="bucket=takehome-backend" -backend-config="key=terraform/state" -backend-config="region=us-west-2"
+
     - name: Check Terraform State
       id: check_state
       run: |
